

=== 1.4.6 changes ===

* New covering index was added on cur for query speedups.
* (bug 2228) Updated the Slovak translation
* (bug 1976) fix shared user database with a table prefix set
* (bug 2309) Allow templates and template parameters in HTML attribute zone,
  with proper validation checks. (regression from fix for 2304)
* (bug 2355) Use content language in image blacklist check
* (bug 2368) Avoid fatally breaking PHP 4.1.2 in a debug line
* (bug 2384) Fix typo in regex for IP address checking
* Enhance cleanupDupes.php to save the pruned revisions to old for safety, and
  to try to pick the same one that would be read by the wiki
* (bug 2292) Catch 'null' return values for images that can not be  thumbnailed.
* (bug 2277) Added Friulian language file
* (bug 2459) Correct escaping in Special:Log prev/next links


=== Caveats ===

Some output, particularly involving user-supplied inline HTML, may not
produce 100% valid or well-formed XHTML output. Testers are welcome to
set $wgMimeType = "application/xhtml+xml"; to test for remaining problem
cases, but this is not recommended on live sites. (This must be set for
MathML to display properly in Mozilla.)


For notes on 1.3.x and older releases, see HISTORY.


=== Online documentation ===

Documentation for both end-users and site administrators is currently being
built up on Meta-Wikipedia, and is covered under the GNU Free Documentation
License:

  http://meta.wikipedia.org/wiki/Help:Contents


=== Mailing list ===

A MediaWiki-l mailing list has been set up distinct from the Wikipedia
wikitech-l list:

  http://mail.wikipedia.org/mailman/listinfo/mediawiki-l

A low-traffic announcements-only list is also available:
  http://mail.wikipedia.org/mailman/listinfo/mediawiki-announce

It's highly recommended that you sign up for one of these lists if you're
going to run a public MediaWiki, so you can be notified of security fixes.


=== IRC help ===

There's usually someone online in #mediawiki on irc.freenode.net